# wx-uploader

./: .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  README_CN.md  _typos.toml  deny.toml
.github/workflows/: build.yml
examples/: 06-tech-debt.md  config.json  config.yaml
specs/: instructions.md
src/: cli.rs  error.rs  lib.rs  main.rs  markdown.rs  models.rs  openai.rs  output.rs  providers.rs  wechat.rs
tests/: integration_tests.rs
