[package]
name = "wx-uploader"
version = "0.3.0"
edition = "2024"
authors = ["tyr.chen@gmail.com"]
license = "MIT"
documentation = "https://docs.rs/wx-uploader"
repository = "https://github.com/tyrchen/wx-uploader"
homepage = "https://github.com/tyrchen/wx-uploader"
description = "A tool to upload articles to WeChat Official Account"
readme = "README.md"
categories = ["development-tools"]
keywords = ["wechat", "weixin", "official-account", "uploader"]

[dependencies]
anyhow = "1"
clap = "4"
colored = "3"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }
walkdir = "2"
wechat-pub-rs = "0.4"

[dev-dependencies]
tempfile = "3"
