[package]
name = "wx-uploader"
version = "0.5.2"
edition = "2024"
authors = ["tyr.chen@gmail.com"]
license = "MIT"
documentation = "https://docs.rs/wx-uploader"
repository = "https://github.com/tyrchen/wx-uploader"
homepage = "https://github.com/tyrchen/wx-uploader"
description = "A tool to upload articles to WeChat Official Account"
readme = "README.md"
categories = ["development-tools"]
keywords = ["wechat", "weixin", "official-account", "uploader"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
clap = { version = "4", features = ["derive", "color", "help", "env"] }
colored = "3"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }
walkdir = "2"
wechat-pub-rs = "0.5"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
